# SunflowerApps

Binaries/: SunflowerDataService
SunFlowerOSC/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  Config.h  Daemon.cpp  Daemon.h  HTTPEmitter.cpp  HTTPEmitter.h  IEmitter.h  JSONFormatter.cpp  JSONFormatter.h  Log.cpp  Log.h  OSCEmitter.cpp  OSCEmitter.h  PL40.cpp  PL40.h  README.TXT  SerialPort.cpp  SerialPort.h  main.cpp
SunflowerVisualisationApp/: addons.make  config.make
SunflowerVisualisationApp/src/: SolarData.cpp  SolarData.h  camera.cpp  camera.h  gui.cpp  gui.h  main.cpp  ofApp.cpp  ofApp.h
drawGrid/src/: main.cpp  ofApp.cpp  ofApp.h
